--- a/index.html
+++ b/index.html
@@ -6,53 +6,7 @@
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
 <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
-<style>
- @import url('https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@300;500&family=Raleway:ital,wght@0,300;0,500;1,300&display=swap');
- body {
-   margin: 0;
-   padding: 0;
-   font-family: 'Montagu Slab', serif;
- }
- h1 {
-   font-size:1.70rem;
-   font-family: 'Montagu Slab';
-   line-height: 1.2;
-   font-weight: 500;
-   color: darkgoldenrod;
-   
- }
- p {
-   font-family: 'Raleway', sans-serif;
-   font-weight: 300;
-   font-size: 1rem;
-   margin-bottom: 0;
- }
-	#map { position: absolute; top: 0; bottom: 0; width: 100%; }
- .maplibregl-popup-content {
-   max-height: 77vh;
-   overflow-y: auto;
-   max-width: 	35vw;
-   overflow-x: hidden;
-   box-shadow: 0 0 10px #333;
- }
- .mapboxgl-popup-close-button {
-   font-size: 2rem;
-   font-family: 'Railway';
-   font-weight: 500;
-   background-color: rgba(256,256,256,0.8) !important;
-
- }
- @media screen and (orientation: portrait) and (max-width: 1199px) {
-   .maplibregl-popup-content {
-     max-width: 80vw;
-   }
- }
- @media screen and (orientation: landscape) and (max-width: 1000px) {
-   .maplibregl-popup-content {
-     max-width: 50vw;
-   }
- }
-</style>
+<link href="./style.css" rel="stylesheet" />
 </head>
 <body>
   <div id="map"></div>
