Removed fixids folder and moved logic to add folder, made some smaller adjustments in the logic

--- a/add/html/index.html
+++ b/add/html/index.html
@@ -34,5 +34,8 @@
       <span>coordinate: <input type="text" name="coordinates" /></span>
       <button type="submit">Add</button>
     </form>
+    <form name="fix" action="/fix-ids" method="GET">
+      <button type="submit">Update Ids</button>
+    </form>
   </body>
 </html>
